Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26012

InnoDB purge and shutdown hangs after failed ALTER TABLE

    XMLWordPrintable

Details

    Description

      In ha_innobase::commit_inplace_alter_table() there are two error handling code paths where we fail to invoke purge_sys.resume_FTS() after purge_sys.stop_FTS() had been invoked. This would cause purge threads to wait forever for the counter to reach 0 again, and eventually cause the server shutdown to hang.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.