MDEV-26012 InnoDB purge and shutdown hangs after failed ALTER TABLE

ha_innobase::commit_inplace_alter_table(): Invoke
purge_sys.resume_FTS() on all error handling paths
if purge_sys.stop_FTS() had been called.

This fixes a regression that had been introduced in
commit 1bd681c8b3c5213ce1f7976940a7dc38b48a0d39 (MDEV-25506).